Enable test for services

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
           "skipTests": true
         },
         "@schematics/angular:service": {
-          "skipTests": true
+          "skipTests": false
         }
       },
       "root": "",
