--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngx-formly/bootstrap": "^5.0.0",
+    "@ngx-formly/core": "^5.0.0",
+    "bootstrap": "^4.5.3",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4",
-    "@ngx-formly/core": "^5.0.0",
-    "@ngx-formly/bootstrap": "^5.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.5",
